--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "^4.12.4",
     "mongoose": "^5.11.15"
   },
+  "engines": {
+    "node": "4.4.5"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/freeCodeCamp/boilerplate-mongomongoose.git"
